# plugin-applications

./: Cargo.toml  README.md  flake.nix
src/: scrubber.rs
