[package]
name = "applications"
description = "Plugin to launch applications with anyrun "
repository = "https://github.com/anyrun-org/plugin-applications"
homepage = "https://github.com/anyrun-org/plugin-applications"
readme = "README.md"
license = "GPLv3"
version = "0.1.0"
edition = "2021"
author = ["Kirottu"]


[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyrun-plugin = "0.1.0"
abi_stable = "0.11.1"
sublime_fuzzy = "0.7.0"
fuzzy-matcher = "0.3.7"
ron = "0.8.0"
serde = { version = "1.0.159", features = ["derive"] }
